Fix mobile overflow

--- a/src/widgets/board-settings/BoardSettings.module.scss
+++ b/src/widgets/board-settings/BoardSettings.module.scss
@@ -1,3 +1,5 @@
 .container {
+  max-height: calc(100vh - 60px);
+  overflow: auto;
   padding: 2rem;
 }
